# haskell.nix-static-example

./: Example.hs  ExampleService.hs  README.md  build-dynamic.sh  build-static.sh  example-static.nix  example.cabal  example.nix  example_service.proto  generate-service.sh  haskell-nix.json  nixpkgs-static.nix  nixpkgs.nix  update-nixpkgs.sh
.github/workflows/: cached-build.yml
