cabal-version:       >=1.10
name:                example
version:             0.1.0.0
build-type:          Simple

executable example
  build-depends:
    base,
    grpc-haskell,
    grpc-haskell-core,
    proto3-suite,
    proto3-wire

  ghc-options: -W -Werror

  main-is: Example.hs

  hs-source-dirs: .

  default-language: Haskell2010
