cabal-version: >=1.10
name:          example
version:       0.1.0.0
build-type:    Simple

executable example
    main-is:          Example.hs
    hs-source-dirs:   .
    other-modules:    ExampleService
    default-language: Haskell2010
    ghc-options:      -W -Werror
    build-depends:
        base -any,
        grpc-haskell -any,
        grpc-haskell-core -any,
        proto3-suite -any,
        proto3-wire -any,
        deepseq -any,
        bytestring -any,
        containers -any,
        text -any,
        vector -any
